spl/tests/compile_fail/typo_field_ref.stderr
error: `mint = mnit` — no field `mnit` in this accounts struct
  --> tests/compile_fail/typo_field_ref.rs:12:28
   |
12 |     #[account(token(mint = mnit, authority = authority, token_program = token_program))]
   |                            ^^^^

warning: unused import: `accounts::token`
 --> tests/compile_fail/typo_field_ref.rs:3:18
  |
3 | use quasar_spl::{accounts::token, TokenProgram, *};
  |                  ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
